--- a/xflow-project/.vscode/launch.json
+++ b/xflow-project/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "FlowTest",
+            "request": "launch",
+            "mainClass": "com.nhnacademy.test.FlowTest",
+            "projectName": "xflow-project"
+        },
+        {
+            "type": "java",
+            "name": "ClientTest",
+            "request": "launch",
+            "mainClass": "com.nhnacademy.test.ClientTest",
+            "projectName": "xflow-project"
+        },
+        {
+            "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}"
